# nef-file-manager

./: LICENSE  README.md  main.py  pyproject.toml  run.sh
nef_file_manager/: __init__.py  __main__.py  core.py
tests/: test_cli.py  test_raw_file_manager.py
