[tool.poetry]
name = "raw-file-manager"
version = "0.1.0"
description = ""
authors = ["Rey Marin Jr. <rey.marin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
exif = "1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
